tidy up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 *.pyc
 *~
 *.h5
+*.pdf
+*#
+*#*
+apps/nambu
+apps/plaquette
+/htscplaquettebethe.aux
+/htscplaquettebethe.bbl
+/htscplaquettebethe.blg
+/htscplaquettebethe.log
+/htscplaquettebethe_old.tex
+lilin
+hlrn
+auto
+checkmatsubaratransfofanomfield
+/betheplaquette.bib.bak
+apps/temp
